# memoria

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCKER_SETUP_GUIDE.md  PLAN.md  README.md  pyproject.toml
.claude/skills/: memoria-guide.md
.claude/skills/github-issue/: SKILL.md
.claude/skills/memoria-guide/: SKILL.md
.github/workflows/: auto-tag.yml  docker-publish.yml
docker/: .env.example  DOCKER_ARCHITECTURE.md  Dockerfile  Dockerfile.ui  README.md  SUMMARY.md  docker-compose.central.yml  docker-compose.cpu.yml  docker-compose.http.yml  docker-compose.mac.yml  docker-compose.qdrant-only.yml  docker-compose.server.yml  docker-compose.yml  init-db.sql  run-migrations.sh  start-ui.sh  start.sh
docker/migrations/: 002_rejected_suggestions.sql  004_auto_refresh_views.sql
scripts/: backup_memoria.py  install.sh  setup_ollama.sh  sync_qdrant.py  update.sh
src/mcp_memoria/: __init__.py  __main__.py  server.py
src/mcp_memoria/api/: __init__.py  __main__.py  app.py
src/mcp_memoria/config/: __init__.py  settings.py
src/mcp_memoria/core/: __init__.py  consolidation.py  graph_manager.py  graph_types.py  memory_manager.py  memory_types.py  multi_recall.py  observation.py  rate_limiter.py  reflect.py  update_checker.py  working_memory.py
src/mcp_memoria/db/: __init__.py  database.py  exceptions.py  migrations.py  models.py  (+1 more)
tests/: __init__.py  test_chunking.py  test_chunking_integration.py  test_consolidator.py  test_datetime_utils.py  test_db_models.py  test_graph_types.py  test_memory_types.py  test_multi_recall.py  test_observation.py  test_ollama_embedder.py  test_parallel_sessions.py  test_path_validation.py  test_rate_limiter.py  test_reflect.py
web/: .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.js
web/app/: layout.tsx  page.tsx
web/components/: navigation.tsx
web/lib/: api.ts
(+64 files in other folders)
